--- a/config/yugabyte/bulkload/aurora/bulkload_goal1_aurora.yaml
+++ b/config/yugabyte/bulkload/aurora/bulkload_goal1_aurora.yaml
@@ -1,6 +1,6 @@
 type: POSTGRES
 driver: org.postgresql.Driver
-url: jdbc:postgresql://localhost:5432/postgres?sslmode=require
+url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require
 username: postgres
 password: Password321
 
