--- a/config/yugabyte/write_workloads/insert/yb_colocated/insertG1_varying_index_yb_colocated.yaml
+++ b/config/yugabyte/write_workloads/insert/yb_colocated/insertG1_varying_index_yb_colocated.yaml
@@ -1,6 +1,6 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.22.150:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
 password: Password321@
 
