--- a/config/yugabyte/column_attributes/postgres/cattribG12_pg_increasingPK_length_varchar.yaml
+++ b/config/yugabyte/column_attributes/postgres/cattribG12_pg_increasingPK_length_varchar.yaml
@@ -11,7 +11,7 @@
 #Time to fetch 1 column of 5k bytes
 type: POSTGRES
 driver: org.postgresql.Driver
-url: jdbc:postgresql://sgupta-pg-i-westc-validate.cbtcvpszcgdq.us-west-2.rds.amazonaws.com:5432/postgres?sslmode=require
+url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require
 username: postgres
 password: Password321
 batchsize: 128
