--- a/config/yugabyte/column_attributes/postgres/cattribG1_pg_increasingColumnCountVarchar.yaml
+++ b/config/yugabyte/column_attributes/postgres/cattribG1_pg_increasingColumnCountVarchar.yaml
@@ -10,7 +10,7 @@
 #Purpose: Full table scan time with increasing columns being fetched
 type: POSTGRES
 driver: org.postgresql.Driver
-url: jdbc:postgresql://sgupta-pg-i-westc-validate.cbtcvpszcgdq.us-west-2.rds.amazonaws.com:5432/postgres?sslmode=require
+url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require
 username: postgres
 password: Password321
 batchsize: 128
