--- a/config/yugabyte/column_attributes/postgres/cattribG9_pg_increasingPKFilter_bigint.yaml
+++ b/config/yugabyte/column_attributes/postgres/cattribG9_pg_increasingPKFilter_bigint.yaml
@@ -10,7 +10,7 @@
 #Time to fetch all columns based on 10 non indexed column
 type: POSTGRES
 driver: org.postgresql.Driver
-url: jdbc:postgresql://sgupta-pg-i-westc-validate.cbtcvpszcgdq.us-west-2.rds.amazonaws.com:5432/postgres?sslmode=require
+url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require
 username: postgres
 password: Password321
 batchsize: 128
