--- a/config/yugabyte/scan_workloads/postgres/scanG11_pg_pkey_rangescan_join.yaml
+++ b/config/yugabyte/scan_workloads/postgres/scanG11_pg_pkey_rangescan_join.yaml
@@ -8,7 +8,7 @@
 # Filter condition returns 100000 rows
 type: POSTGRES
 driver: org.postgresql.Driver
-url: jdbc:postgresql://sgupta-pg-i-westc.cbtcvpszcgdq.us-west-2.rds.amazonaws.com:5432/postgres?sslmode=require
+url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require
 username: postgres
 password: Password321
 batchsize: 128
