--- a/config/yugabyte/scan_workloads/postgres/scanG1_pg_hash_pointlookup_primarykey_vs_index.yaml
+++ b/config/yugabyte/scan_workloads/postgres/scanG1_pg_hash_pointlookup_primarykey_vs_index.yaml
@@ -6,7 +6,7 @@
 #    Time to fetch 1 row based (= operator) on a predicate column which is Range indexed
 type: POSTGRES
 driver: org.postgresql.Driver
-url: jdbc:postgresql://sgupta-pg-i-westc.cbtcvpszcgdq.us-west-2.rds.amazonaws.com:5432/postgres?sslmode=require
+url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require
 username: postgres
 password: Password321
 batchsize: 128
