--- a/config/yugabyte/scan_workloads/postgres/scanG3_pg_index_rangeScan_increasingRows_withpri.yaml
+++ b/config/yugabyte/scan_workloads/postgres/scanG3_pg_index_rangeScan_increasingRows_withpri.yaml
@@ -8,7 +8,7 @@
 #    Range scan time to fetch 1M rows
 type: POSTGRES
 driver: org.postgresql.Driver
-url: jdbc:postgresql://sgupta-pg-i-westc.cbtcvpszcgdq.us-west-2.rds.amazonaws.com:5432/postgres?sslmode=require
+url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require
 username: postgres
 password: Password321
 batchsize: 128
