--- a/config/yugabyte/scan_workloads/postgres/scanG6_pg_pkey_rangescan_halfTableScan_increasingColumn.yaml
+++ b/config/yugabyte/scan_workloads/postgres/scanG6_pg_pkey_rangescan_halfTableScan_increasingColumn.yaml
@@ -7,7 +7,7 @@
 #   Time to fetch 100 column from schema that has 100 column
 type: POSTGRES
 driver: org.postgresql.Driver
-url: jdbc:postgresql://sgupta-pg-i-westc.cbtcvpszcgdq.us-west-2.rds.amazonaws.com:5432/postgres?sslmode=require
+url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require
 username: postgres
 password: Password321
 batchsize: 128
