--- a/config/yugabyte/scan_workloads/postgres/scanG8_pg_nonIndexed_rangescan_fullTableScan_increasingRow.yaml
+++ b/config/yugabyte/scan_workloads/postgres/scanG8_pg_nonIndexed_rangescan_fullTableScan_increasingRow.yaml
@@ -7,7 +7,7 @@
 # Time to scan a table with 10 million rows
 type: POSTGRES
 driver: org.postgresql.Driver
-url: jdbc:postgresql://sgupta-pg-i-westc.cbtcvpszcgdq.us-west-2.rds.amazonaws.com:5432/postgres?sslmode=require
+url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require
 username: postgres
 password: Password321
 batchsize: 128
