--- a/config/yugabyte/scan_workloads/yb_colocated/scanG1_colo_hash_pointlookup_primarykey_vs_index.yaml
+++ b/config/yugabyte/scan_workloads/yb_colocated/scanG1_colo_hash_pointlookup_primarykey_vs_index.yaml
@@ -6,7 +6,7 @@
 #    Time to fetch 1 row based (= operator) on a predicate column which is HASH indexed
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.54.67:5433/yugabyte?sslmode=require
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 username: yugabyte
 password: Password@123
