--- a/config/yugabyte/scan_workloads/yb_colocated/scanG4_colo_pkey_rangeScan_INclause_increasingRows_.yaml
+++ b/config/yugabyte/scan_workloads/yb_colocated/scanG4_colo_pkey_rangeScan_INclause_increasingRows_.yaml
@@ -8,7 +8,7 @@
 #   Range scan time to fetch 1000 rows
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.54.67:5433/yugabyte?sslmode=require
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 username: yugabyte
 password: Password@123
