--- a/config/yugabyte/write_workloads/insert/aurora/insertG2_varying_columns_aurora.yaml
+++ b/config/yugabyte/write_workloads/insert/aurora/insertG2_varying_columns_aurora.yaml
@@ -1,6 +1,6 @@
 type: POSTGRES
 driver: org.postgresql.Driver
-url: jdbc:postgresql://localhost:5432/postgres?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: postgres
 password: password
 
