--- a/config/yugabyte/write_workloads/update/yb_colocated/updateG3_varying_columns_yb_colocated.yaml
+++ b/config/yugabyte/write_workloads/update/yb_colocated/updateG3_varying_columns_yb_colocated.yaml
@@ -1,6 +1,6 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
 password: password
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
