--- a/config/yugabyte/bulkload/yb_colocated/bulkload_goal2_yb_colocated.yaml
+++ b/config/yugabyte/bulkload/yb_colocated/bulkload_goal2_yb_colocated.yaml
@@ -1,8 +1,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true&connectTimeout=144000&socketTimeout=14400&tcpKeepAlive=true
-username: yugabyte
-password: Password@321
+username: {{username}}
+password: {{password}}
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
