--- a/config/yugabyte/bulkload/yugabyte/bulkload_goal1_yb.yaml
+++ b/config/yugabyte/bulkload/yugabyte/bulkload_goal1_yb.yaml
@@ -1,8 +1,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: yugabyte
-password: Password@321
+username: {{username}}
+password: {{password}}
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: true
