--- a/config/yugabyte/scan_workloads/yugabyte/scanG3_yb_index_rangeScan_increasingRows.yaml
+++ b/config/yugabyte/scan_workloads/yugabyte/scanG3_yb_index_rangeScan_increasingRows.yaml
@@ -9,8 +9,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: yugabyte
-password: Password@123
+username: {{username}}
+password: {{password}}
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
