--- a/config/yugabyte/write_workloads/insert/yb_colocated/insertG2_varying_columns_yb_colocated.yaml
+++ b/config/yugabyte/write_workloads/insert/yb_colocated/insertG2_varying_columns_yb_colocated.yaml
@@ -1,8 +1,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: yugabyte
-password: password
+username: {{username}}
+password: {{password}}
 
 #colocated tables
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
