--- a/config/yugabyte/write_workloads/update/postgres/updateG1_varying_rows_pg.yaml
+++ b/config/yugabyte/write_workloads/update/postgres/updateG1_varying_rows_pg.yaml
@@ -1,8 +1,8 @@
 type: postgres
 driver: org.postgresql.Driver
 url: jdbc:postgresql://{{endpoint}}:5432/postgres?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: postgres
-password: password
+username: {{username}}
+password: {{password}}
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 4
