--- a/config/yugabyte/write_workloads/update/yb_colocated/updateG2_varying_indexs_yb_colocated.yaml
+++ b/config/yugabyte/write_workloads/update/yb_colocated/updateG2_varying_indexs_yb_colocated.yaml
@@ -1,8 +1,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: yugabyte
-password: password
+username: {{username}}
+password: {{password}}
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
