--- a/config/yugabyte/write_workloads/update/yugabyte/updateG2_varying_indexs_yb.yaml
+++ b/config/yugabyte/write_workloads/update/yugabyte/updateG2_varying_indexs_yb.yaml
@@ -1,8 +1,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: yugabyte
-password: password
+username: {{username}}
+password: {{password}}
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 4
