--- a/config/yugabyte/tests/yb_col.yaml
+++ b/config/yugabyte/tests/yb_col.yaml
@@ -1,16 +1,13 @@
-#TODO: Comments are incorrect. Need fixing.
-#TEST FOR YUGABYTE COLOCATED TABLES
 #GOAL12 HashJoin and Merge join tests
 #TESTS:
 # Filter condition returns 1 rows
-# Filter condition returns 100 rows for both tables. Output should be 10000 rows
+# Filter condition returns 1000 rows .
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require
-#createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
-username: {{username}}
-password: {{password}}
-batchsize: 128
+url: jdbc:yugabytedb://172.151.26.42:5433/yugabyte?sslmode=require
+createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
+username: yugabyte
+password: Password@321
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
 terminals: 1
@@ -29,7 +26,7 @@ microbenchmark:
             - DROP TABLE IF EXISTS pkey_rangescan_join_1;
             - DROP TABLE IF EXISTS pkey_rangescan_join_2;
             - CREATE TABLE pkey_rangescan_join_1(col_bigint_id_1 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_1 varchar(10), col_varchar100_1 varchar(100), col_varchar100_2 varchar(100), col_varchar500_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC, col_bigint_1 ASC));
-            - CREATE TABLE pkey_rangescan_join_2(col_bigint_id_1 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_1 varchar(10), col_varchar100_1 varchar(100), col_varchar100_2 varchar(100), col_varchar500_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC, ASC));
+            - CREATE TABLE pkey_rangescan_join_2(col_bigint_id_1 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_1 varchar(10), col_varchar100_1 varchar(100), col_varchar100_2 varchar(100), col_varchar500_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC, col_bigint_1 ASC));
         loadRules:
             - table: pkey_rangescan_join_
               count: 2
@@ -41,7 +38,7 @@ microbenchmark:
                     params: [1, 1000000]
                   - name: col_bigint_
                     count: 5
-                    util: RandomNumber
+                    util: PrimaryIntGen
                     params: [1, 1000000]
                   - name: col_float2_
                     count: 2
@@ -72,33 +69,30 @@ microbenchmark:
                   - name: hash_join_fetch_1row
                     weight: 100
                     queries:
-                        - query: select * from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1 = ? and pkey_rangescan_join_2.col_bigint_id_1 = ? ;
+                        - query: select * from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_2=pkey_rangescan_join_2.col_bigint_2 and pkey_rangescan_join_1.col_bigint_id_1 = ?  ;
                           bindings:
-                              count: 2
+                              count: 1
                               util: RandomNumber
                               params: [ 1, 1000000 ]
 
-            - workload: scanG12_hash_join_fetch_10000row
-                  run:
-                        - name: hash_join_fetch_10000row
-                            weight: 100
-                            queries:
-                                - query: select * from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1 < 101 and pkey_rangescan_join_2.col_bigint_id_1 < 101 ;
+            - workload: scanG12_hash_join_fetch_1000row
+              run:
+                  - name: hash_join_fetch_1000row
+                    weight: 100
+                    queries:
+                        - query: select * from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_2=pkey_rangescan_join_2.col_bigint_2 and pkey_rangescan_join_1.col_bigint_id_1 < 1001 and pkey_rangescan_join_2.col_bigint_id_1 < 1001 ;
 
             - workload: scanG12_merge_join_fetch_1row
               run:
                   - name: merge_join_fetch_1row
                     weight: 100
                     queries:
-                        - query: select * from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_2 = pkey_rangescan_join_2.col_bigint_2 and pkey_rangescan_join_1.col_bigint_id_1 = ? and pkey_rangescan_join_2.col_bigint_id_1 = ? ;
-                          bindings:
-                              count: 2
-                              util: RandomNumber
-                              params: [ 1, 1000000 ]
+                        - query: select * from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1 < 2  and pkey_rangescan_join_2.col_bigint_id_1 < 2;
 
-            - workload: scanG12_merge_join_fetch_10000row
-                  run:
-                        - name: merge_join_fetch_10000row
-                            weight: 100
-                            queries:
-                                - query: select * from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_2 = pkey_rangescan_join_2.col_bigint_2 and pkey_rangescan_join_1.col_bigint_id_1 < 101 and pkey_rangescan_join_2.col_bigint_id_1 < 101 ;
+
+            - workload: scanG12_merge_join_fetch_1000row
+              run:
+                  - name: merge_join_fetch_1000row
+                    weight: 100
+                    queries:
+                        - query: select * from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1 < 1001 and pkey_rangescan_join_2.col_bigint_id_1 < 1001 ;
