--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,14 @@
             <version>1.7.36</version>
         </dependency>
 
+
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.8.6</version>
+            </dependency>
+
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-configuration2</artifactId>
