--- a/config/yugabyte/scan_workloads/yugabyte/scanG1_yb_hash_pointlookup_primarykey_vs_index.yaml
+++ b/config/yugabyte/scan_workloads/yugabyte/scanG1_yb_hash_pointlookup_primarykey_vs_index.yaml
@@ -6,9 +6,9 @@
 #    Time to fetch 1 row based (= operator) on a predicate column which is HASH indexed
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require
-username: {{username}}
-password: {{password}}
+url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=require
+username: yugabyte
+password:
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 loaderthreads: 1
@@ -16,10 +16,10 @@ terminals: 1
 collect_pg_stat_statements: true
 works:
     work:
-        time_secs: 300
+        time_secs: 10
         active_terminals: 1
         rate: unlimited
-        warmup: 60
+        warmup: 0
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
     properties:
@@ -33,7 +33,7 @@ microbenchmark:
         loadRules:
             - table: pkey_hash_point_lookup_tbl_
               count: 1
-              rows: 1000000
+              rows: 100
               columns:
                   - name: col_bigint_id_
                     count: 1
@@ -108,9 +108,9 @@ microbenchmark:
                     weight: 100
                     queries:
                         - query: select * from pkey_hash_point_lookup_tbl_1 where col_bigint_id_1=500009
-            - workload: scanG1_yb_indx_hash_point_lookup
-              run:
-                  - name: indx_hash_point_lookup_test
-                    weight: 100
-                    queries:
-                        - query: select * from indx_hash_point_lookup_tbl_1 where col_bigint_id_1=500009
+#            - workload: scanG1_yb_indx_hash_point_lookup
+#              run:
+#                  - name: indx_hash_point_lookup_test
+#                    weight: 100
+#                    queries:
+#                        - query: select * from indx_hash_point_lookup_tbl_1 where col_bigint_id_1=500009
