--- a/config/yugabyte/regression_pipelines/scan_workloads/yb_colocated/scanG8_colo_nonIndexed_rangescan_fullTableScan_increasingRow.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yb_colocated/scanG8_colo_nonIndexed_rangescan_fullTableScan_increasingRow.yaml
@@ -33,6 +33,10 @@ microbenchmark:
             - CREATE TABLE noIndex_fullTable_seqScan_1M_rows_1(col_bigint_id_1 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_1 varchar(10), col_varchar100_1 varchar(100), col_varchar100_2 varchar(100), col_varchar500_1 varchar(500));
             - CREATE TABLE noIndex_fullTable_seqScan_5M_rows_1(col_bigint_id_1 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_1 varchar(10), col_varchar100_1 varchar(100), col_varchar100_2 varchar(100), col_varchar500_1 varchar(500));
             - CREATE TABLE noIndex_fullTable_seqScan_10M_rows_1(col_bigint_id_1 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_1 varchar(10), col_varchar100_1 varchar(100), col_varchar100_2 varchar(100), col_varchar500_1 varchar(500));
+        cleanup:
+            - DROP TABLE IF EXISTS noIndex_fullTable_seqScan_1M_rows_1;
+            - DROP TABLE IF EXISTS noIndex_fullTable_seqScan_5M_rows_1;
+            - DROP TABLE IF EXISTS noIndex_fullTable_seqScan_10M_rows_1;
         loadRules:
             - table: noIndex_fullTable_seqScan_1M_rows_
               count: 1
