--- a/config/yugabyte/regression_pipelines/scan_workloads/yb_colocated/scanG3_colo_index_rangeScan_increasingRows.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yb_colocated/scanG3_colo_index_rangeScan_increasingRows.yaml
@@ -31,6 +31,8 @@ microbenchmark:
             - DROP TABLE IF EXISTS indx_rangescan_tbl_1;
             - CREATE TABLE indx_rangescan_tbl_1(col_bigint_id_1 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_bigint_5 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_1 varchar(10), col_varchar100_1 varchar(100), col_varchar100_2 varchar(100), col_varchar500_1 varchar(500));
             - CREATE INDEX ON indx_rangescan_tbl_1(col_bigint_id_1 ASC);
+        cleanup:
+            - DROP TABLE IF EXISTS indx_rangescan_tbl_1;
         loadRules:
             - table: indx_rangescan_tbl_
               count: 1
