--- a/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG11_pkey_rangescan_join.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG11_pkey_rangescan_join.yaml
@@ -76,22 +76,22 @@ microbenchmark:
                   - name: pkey_rangescan_join_fetch_1row_test
                     weight: 100
                     queries:
-                        - query: select * from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1<2;
+                        - query: select pkey_rangescan_join_1.col_bigint_id_1 from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1<2;
             - workload: scanG11_pkey_rangescan_join_fetch_10row
               run:
                   - name: pkey_rangescan_join_fetch_10row_test
                     weight: 100
                     queries:
-                        - query: select * from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1<11;
+                        - query: select pkey_rangescan_join_1.col_bigint_id_1 from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1<11;
             - workload: scanG11_pkey_rangescan_join_fetch_1000row
               run:
                   - name: pkey_rangescan_join_fetch_1000row_test
                     weight: 100
                     queries:
-                        - query: select * from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1<1001;
+                        - query: select pkey_rangescan_join_1.col_bigint_id_1 from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1<1001;
             - workload: scanG11_pkey_rangescan_join_fetch_100000row
               run:
                   - name: pkey_rangescan_join_fetch_100000row_test
                     weight: 100
                     queries:
-                        - query: select * from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1<100001;
+                        - query: select pkey_rangescan_join_1.col_bigint_id_1 from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1<100001;
