--- a/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG2_pkey_rangeScan_increasingRows.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG2_pkey_rangeScan_increasingRows.yaml
@@ -73,22 +73,22 @@ microbenchmark:
                   - name: pkey_rangescan_1row_test
                     weight: 100
                     queries:
-                        - query: select * from pkey_rangescan_tbl_1 where col_bigint_id_1>999999
+                        - query: select col_bigint_id_1 from pkey_rangescan_tbl_1 where col_bigint_id_1>999999
             - workload: scanG2_pkey_rangescan_varying_rows_100Krows
               run:
                   - name: pkey_rangescan_100krow_test
                     weight: 100
                     queries:
-                        - query: select * from pkey_rangescan_tbl_1 where col_bigint_id_1>900000
+                        - query: select col_bigint_id_1 from pkey_rangescan_tbl_1 where col_bigint_id_1>900000
             - workload: scanG2_pkey_rangescan_varying_rows_500Krows
               run:
                   - name: pkey_rangescan_500krow_test
                     weight: 100
                     queries:
-                        - query: select * from pkey_rangescan_tbl_1 where col_bigint_id_1>500000
+                        - query: select col_bigint_id_1 from pkey_rangescan_tbl_1 where col_bigint_id_1>500000
             - workload: scanG2_pkey_rangescan_varying_rows_1Mrows
               run:
                   - name: pkey_rangescan_1Mrow_test
                     weight: 100
                     queries:
-                        - query: select * from pkey_rangescan_tbl_1 where col_bigint_id_1>1
+                        - query: select col_bigint_id_1 from pkey_rangescan_tbl_1 where col_bigint_id_1>1
