--- a/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG3_index_rangeScan_increasingRows.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG3_index_rangeScan_increasingRows.yaml
@@ -75,22 +75,22 @@ microbenchmark:
                   - name: indx_rangescan_1row_test
                     weight: 100
                     queries:
-                        - query: select * from indx_rangescan_tbl_1 where col_bigint_id_1>999999
+                        - query: select col_bigint_id_1 from indx_rangescan_tbl_1 where col_bigint_id_1>999999
             - workload: scanG3_indx_rangescan_varying_rows_100Krows
               run:
                   - name: indx_rangescan_100krow_test
                     weight: 100
                     queries:
-                        - query: select * from indx_rangescan_tbl_1 where col_bigint_id_1>900000
+                        - query: select col_bigint_id_1 from indx_rangescan_tbl_1 where col_bigint_id_1>900000
             - workload: scanG3_indx_rangescan_varying_rows_500Krows
               run:
                   - name: indx_rangescan_500krow_test
                     weight: 100
                     queries:
-                        - query: select * from indx_rangescan_tbl_1 where col_bigint_id_1>500000
+                        - query: select col_bigint_id_1 from indx_rangescan_tbl_1 where col_bigint_id_1>500000
             - workload: scanG3_indx_rangescan_varying_rows_1Mrows
               run:
                   - name: indx_rangescan_1Mrow_test
                     weight: 100
                     queries:
-                        - query: select * from indx_rangescan_tbl_1 where col_bigint_id_1>1
+                        - query: select col_bigint_id_1 from indx_rangescan_tbl_1 where col_bigint_id_1>1
