--- a/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG7_pkey_rangescan_fullTableScan_increasingColumn.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG7_pkey_rangescan_fullTableScan_increasingColumn.yaml
@@ -76,16 +76,16 @@ microbenchmark:
                   - name: pkey_rangescan_fullTable_table1column_fetch1column_test
                     weight: 100
                     queries:
-                        - query: select * from pkey_rangescan_fullTable_1column_1 where col_bigint_id_1>1
+                        - query: select col_bigint_id_1 from pkey_rangescan_fullTable_1column_1 where col_bigint_id_1>1
             - workload: scanG7_pkey_rangescan_fullTable_table10column_fetch10column
               run:
                   - name: pkey_rangescan_fullTable_table10column_fetch10column_test
                     weight: 100
                     queries:
-                        - query: select * from pkey_rangescan_fullTable_10column_1 where col_bigint_id_1>1
+                        - query: select col_bigint_id_1 from pkey_rangescan_fullTable_10column_1 where col_bigint_id_1>1
             - workload: scanG7_pkey_rangescan_fullTable_table100column_fetch100column
               run:
                   - name: pkey_rangescan_halfTable_table100column_fetch100column_test
                     weight: 100
                     queries:
-                        - query: select * from pkey_rangescan_fullTable_100column_1 where col_bigint_id_1>1
+                        - query: select col_bigint_id_1 from pkey_rangescan_fullTable_100column_1 where col_bigint_id_1>1
