--- a/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG9_count_nonIndexed_rangescan_fullTableScan_increasingRow.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/postgres/scanG9_count_nonIndexed_rangescan_fullTableScan_increasingRow.yaml
@@ -148,16 +148,16 @@ microbenchmark:
                   -   name: count_noIndex_fullTable_seqScan_1M_rows_test
                       weight: 100
                       queries:
-                          -   query: select count(*) from count_noIndex_fullTable_seqScan_1M_rows_1
+                          -   query: select count(col_bigint_id_1) from count_noIndex_fullTable_seqScan_1M_rows_1
             - workload: scanG9_count_noIndex_fullTable_seqScan_5M_rows
               run:
                   -   name: count_noIndex_fullTable_seqScan_5M_rows_test
                       weight: 100
                       queries:
-                          -   query: select count(*) from count_noIndex_fullTable_seqScan_5M_rows_1
+                          -   query: select count(col_bigint_id_1) from count_noIndex_fullTable_seqScan_5M_rows_1
             - workload: scanG9_count_noIndex_fullTable_seqScan_10M_rows
               run:
                   -   name: count_noIndex_fullTable_seqScan_10M_rows_test
                       weight: 100
                       queries:
-                          -   query: select count(*) from count_noIndex_fullTable_seqScan_10M_rows_1
+                          -   query: select count(col_bigint_id_1) from count_noIndex_fullTable_seqScan_10M_rows_1
