- Changes to include load-balance option in connection url

--- a/config/yugabyte/regression_pipelines/scan_workloads/yb_colocated/scanG11_pkey_rangescan_join.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yb_colocated/scanG11_pkey_rangescan_join.yaml
@@ -8,7 +8,7 @@
 # Filter condition returns 100000 rows
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 username: {{username}}
 password: {{password}}
