--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG8_nonIndexed_rangescan_fullTableScan_increasingRow.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG8_nonIndexed_rangescan_fullTableScan_increasingRow.yaml
@@ -7,7 +7,7 @@
 # Time to scan a table with 10 million rows
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 username: {{username}}
 password: {{password}}
 batchsize: 128
