--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG11_pkey_rangescan_join.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG11_pkey_rangescan_join.yaml
@@ -8,7 +8,7 @@
 # Filter condition returns 100000 rows
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 username: {{username}}
 password: {{password}}
 batchsize: 128
