--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG3_index_rangeScan_increasingRows.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG3_index_rangeScan_increasingRows.yaml
@@ -8,7 +8,7 @@
 #    Range scan time to fetch 1M rows
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true&load-balance=false
 username: {{username}}
 password: {{password}}
 batchsize: 128
